; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/802/extr_tr.c_rif_hash.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/802/extr_tr.c_rif_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RIF_TABLE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @rif_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @rif_hash(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = getelementptr inbounds i8, i8* %4, i64 0
  %6 = load i8, i8* %5, align 1
  %7 = zext i8 %6 to i64
  store i64 %7, i64* %3, align 8
  %8 = load i64, i64* %3, align 8
  %9 = shl i64 %8, 2
  %10 = load i8*, i8** %2, align 8
  %11 = getelementptr inbounds i8, i8* %10, i64 1
  %12 = load i8, i8* %11, align 1
  %13 = zext i8 %12 to i64
  %14 = xor i64 %9, %13
  store i64 %14, i64* %3, align 8
  %15 = load i64, i64* %3, align 8
  %16 = shl i64 %15, 2
  %17 = load i8*, i8** %2, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 2
  %19 = load i8, i8* %18, align 1
  %20 = zext i8 %19 to i64
  %21 = xor i64 %16, %20
  store i64 %21, i64* %3, align 8
  %22 = load i64, i64* %3, align 8
  %23 = shl i64 %22, 2
  %24 = load i8*, i8** %2, align 8
  %25 = getelementptr inbounds i8, i8* %24, i64 3
  %26 = load i8, i8* %25, align 1
  %27 = zext i8 %26 to i64
  %28 = xor i64 %23, %27
  store i64 %28, i64* %3, align 8
  %29 = load i64, i64* %3, align 8
  %30 = shl i64 %29, 2
  %31 = load i8*, i8** %2, align 8
  %32 = getelementptr inbounds i8, i8* %31, i64 4
  %33 = load i8, i8* %32, align 1
  %34 = zext i8 %33 to i64
  %35 = xor i64 %30, %34
  store i64 %35, i64* %3, align 8
  %36 = load i64, i64* %3, align 8
  %37 = shl i64 %36, 2
  %38 = load i8*, i8** %2, align 8
  %39 = getelementptr inbounds i8, i8* %38, i64 5
  %40 = load i8, i8* %39, align 1
  %41 = zext i8 %40 to i64
  %42 = xor i64 %37, %41
  store i64 %42, i64* %3, align 8
  %43 = load i64, i64* %3, align 8
  %44 = lshr i64 %43, 8
  %45 = load i64, i64* %3, align 8
  %46 = xor i64 %45, %44
  store i64 %46, i64* %3, align 8
  %47 = load i64, i64* %3, align 8
  %48 = load i32, i32* @RIF_TABLE_SIZE, align 4
  %49 = sub nsw i32 %48, 1
  %50 = sext i32 %49 to i64
  %51 = and i64 %47, %50
  ret i64 %51
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
